@@ -1084,6 +1084,12 @@ So by <acroref type="definition" acro="OV" />, $\vect{u}$ and $\alpha\vect{v}+\b
 </problem>
 </exercise>
 
+<!-- Question suggested by Chili Johnson, Spring 2015 -->
+<exercise type="T" number="31" rough="Pointless to Gram-Schmidt twice">
+<problem contributor="robertbeezer">Suppose that the set $S$ is linearly independent. Apply the Gram-Schmidt procedure (<acroref type="theorem" acro="GSP" />) twice, creating first the linearly independent set $T_1$ from $S$, and then creating $T_2$ from $T_1$.  As a consequence of <acroref type="exercise" acro="O.T30" />, prove that $T_1=T_2$.  In other words, it is pointless to apply the Gram-Schmidt procedure twice.
+</problem>
+</exercise>
+
 </exercisesubsection>
 
 </section>
