@@ -1,6 +1,7 @@
 v3.xx 2015/xx/xx
 ~~~~~~~~~~~~~~~~
 New: Exercise SSLE.C53, a 2x2 system from The Economist
+New: Exercise O.T31, Gram-Schmidt twice (suggested by Chili Johnson)
 Edit: Consistent titles on Sage nonsingular matrix series (Daniel York)
 Typo: Example NSS, sentence needs "which" to join clauses (Chili Johnson)
 Typo: Example LLDS, set is R, not B (Daniel York)
